syntax = "proto3";

package ecommerce.v1;

import "ecommerce/v1/common.proto";

service SetupService {
  // One-time initial setup. Creates tenant + store + owner staff.
  rpc InitializeStore(InitializeStoreRequest) returns (InitializeStoreResponse);
}

message InitializeStoreRequest {
  string store_name = 1;
  string owner_email = 2;
  string owner_password = 3;
  string owner_login_id = 4; // optional (future use)
  ActorContext actor = 5;
}

message InitializeStoreResponse {
  string tenant_id = 1;
  string store_id = 2;
  string owner_staff_id = 3;
  string vendor_id = 4;
}
